ARM: dts: msm: Disable U1U2 low power mode on 8084
There are multiple bus errors observed when U1U2 low power mode is
enabled as below :
1. Running Disparity Error
2. Invalid 10-Bit Symbol Error

It is also observed that device is initiating U1/U2 entry before specified
time while waiting for Data Packet ACK from host which unnecessary put LINK
into low power mode during active data transfer causing above different bus
errors. To improve bus utilization and overcome device initiated U1/U2
related issue, disable U1U2 low power mode functionality on 8084.

CRs-fixed: 795826
Change-Id: Ia220abad26bc897bfeea865fbb04f0ece6ecedd6
Signed-off-by: Azhar Shaikh <azhars@codeaurora.org>
(cherry picked from commit 15e6aa1d68af945b557a12a3c0bfb715ab162fd8)

--- a/arch/arm/boot/dts/qcom/apq8084.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084.dtsi
@@ -4433,6 +4433,7 @@
 			interrupts = <0 131 0>, <0 179 0>;
 			interrupt-names = "irq", "otg_irq";
 			tx-fifo-resize;
+			snps,usb3-u1u2-disable;
 			usb-phy = <&hsphy0>, <&ssphy0>;
 		};
 	};
