--- a/arch/arm/configs/shamu_t_defconfig
+++ b/arch/arm/configs/shamu_t_defconfig
@@ -370,7 +370,7 @@ CONFIG_MSM_SMD=y
 CONFIG_MSM_PCIE=y
 CONFIG_MSM_SMD_DEBUG=y
 CONFIG_MSM_SMP2P=y
-CONFIG_MSM_SMP2P_TEST=y
+#CONFIG_MSM_SMP2P_TEST is not set
 # CONFIG_MSM_TEST_QMI_CLIENT is not set
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 CONFIG_MSM_DEVFREQ_CPUBW=y
