--- a/arch/arm/boot/dts/qcom/apq8084-shamu.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-shamu.dtsi
@@ -127,13 +127,14 @@
 		status = "disabled";
 	};
 
-	bluesleep {
-		compatible = "qcom,bluesleep";
-		bt_host_wake = <&msmgpio 67 0>;
-		bt_ext_wake = <&msmgpio 71 0>;
-		interrupt-parent = <&msmgpio>;
-		interrupts = <67 0>;
-		interrupt-names = "host_wake";
+	bt_nitrous {
+		compatible = "goog,nitrous";
+		uart-port = <0>;
+		power-gpio = <&pma8084_gpios 4 0>;
+		host-wake-gpio = <&msmgpio 67 0>;
+		host-wake-polarity = <0>;
+		dev-wake-gpio = <&msmgpio 71 0>;
+		dev-wake-polarity = <0>;
 	};
 };
 
